tests/snapshots/codegen__batchone.snap
---
source: tests/codegen.rs
expression: code
---
// Code generated by sqlc-gen-sqlx v[VERSION]. DO NOT EDIT.
// sqlc version: [VERSION]

#![allow(
    dead_code,
    reason = "generated queries may expose items a caller does not use"
)]

pub trait AsExecutor {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::Postgres>;
}
impl AsExecutor for sqlx::PgPool {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::Postgres> {
        &*self
    }
}
impl AsExecutor for &sqlx::PgPool {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::Postgres> {
        *self
    }
}
impl AsExecutor for sqlx::PgConnection {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::Postgres> {
        &mut *self
    }
}
impl AsExecutor for sqlx::Transaction<'_, sqlx::Postgres> {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::Postgres> {
        &mut **self
    }
}
impl AsExecutor for sqlx::pool::PoolConnection<sqlx::Postgres> {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::Postgres> {
        &mut **self
    }
}
impl<T: AsExecutor + ?Sized> AsExecutor for &mut T {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::Postgres> {
        (**self).as_executor()
    }
}
const BATCH_GET_AUTHOR: &str = "SELECT id, name, bio FROM authors WHERE id = $1";
#[derive(Debug, Clone, sqlx::FromRow)]
pub struct BatchGetAuthorRow {
    pub id: i64,
    pub name: String,
    pub bio: Option<String>,
}
pub fn batch_get_author<'a, E, I>(
    db: E,
    items: I,
) -> impl futures_core::stream::Stream<
    Item = Result<BatchGetAuthorRow, sqlx::Error>,
> + 'a
where
    E: AsExecutor + 'a,
    I: IntoIterator<Item = i64> + 'a,
    I::IntoIter: 'a,
{
    futures_util::stream::try_unfold(
        (db, items.into_iter()),
        |(mut db, mut items)| async move {
            let Some(item) = items.next() else {
                return Ok(None);
            };
            let row = sqlx::query_as::<_, BatchGetAuthorRow>(BATCH_GET_AUTHOR)
                .bind(item)
                .fetch_one(db.as_executor())
                .await?;
            Ok(Some((row, (db, items))))
        },
    )
}
